<resources>
    <string name="app_name">Machine Homework 1</string>
    <string name="edit_message1">Title</string>
    <string name="edit_message2">Content</string>
    <string name="button_send">Send</string>
    <string name="button2_clear">Clear</string>
    <string name="button3_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_portrait">Portrait</string>
</resources>
